--- a/LinkedList/0142.md
+++ b/LinkedList/0142.md
@@ -14,7 +14,19 @@
 
 链表的题目只要舍得花空间，然后再自己画一下都会做出来的哈哈哈。
 
-关键词：哈希表
+如果链表有有环我们定能得到这样一幅图：
+
+![](https://raw.githubusercontent.com/zheng-shugan/picgo/master/202206291055179.png)
+
+fast 在环内走了 $(n + 1)c + nb$ 的距离才和 slow 指针相遇的（其中 n 为走的圈数），其中 slow 指针走了 $b$ 的距离。
+
+- 因为快指针每次都走两步，慢指针每次都只走一步
+- 所以快指针走的距离永远是慢指针的两倍
+- 得 $a + (n + 1)b + nc = 2(a + b)$
+
+求解可得 $a = c + (n - 1)(b + c)$，在环内不管走多少个 $b +c $ 都还是在原地，当前的慢指针走 c 步恰好到环的入口！$a + b$ 的位置恰好是两指针相遇的位置，两指针相遇的时候再利用一根指针指向头节点，该节点和慢指针一起走，当两指针相遇就恰好是环的入口了！
+
+关键词：哈希表、双指针
 
 难度：Middle
 
@@ -43,7 +55,29 @@ public:
 解法 2：
 
 ```c++
+    ListNode *detectCycle (ListNode *head) {
+        if (!head) return head;
 
+        ListNode *fast = head;
+        ListNode *slow = head;
+
+        while (fast != NULL && fast->next != NULL) {
+            slow = slow->next;
+            fast = fast->next->next;
+
+            if (fast == slow) {
+                ListNode *p = head;
+                while (p != slow) {
+                    p = p->next;
+                    slow = slow->next;
+                }
+
+                return p;
+            }
+        }
+
+        return NULL;
+    }
 ```
 
 解法 3：
