feat: add solution two

--- a/0000~0100/0074.md
+++ b/0000~0100/0074.md
@@ -7,7 +7,13 @@
 
 **解题思路**
 
+解法1:
+
 因为每个矩阵中的数组是按升序排序的，所以可以对其每个数组都是用二分查找。
+
+解法2：
+
+将二维数组模拟一维数组。
 
 **题解**
 
@@ -45,7 +51,22 @@ public:
 解法 2：
 
 ```c++
+class Solution {
+public:
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        int row = matrix.size(), col = matrix[0].size();
+        int lo = 0, hi = row * col - 1;
 
+        while (lo <= hi) {
+            int mid = (hi - lo) / 2 + lo;
+            if (matrix[mid / col][mid % col] > target) hi = mid - 1;
+            else if (matrix[mid / col][mid % col] < target) lo = mid + 1;
+            else return true;
+        }
+
+        return false;
+    }
+};
 ```
 
 解法 3：
