docs: rewrite solution

--- a/0000~0100/0011.md
+++ b/0000~0100/0011.md
@@ -8,7 +8,7 @@
 
 **解题思路**
 
-利用左右两根指针来使体积最大化。每次循环都选出 `lo` 和 `hi` 中的较小值乘上 `lo` 和 `hi` 的距离就获取到的最大容积了。如果 `lo` 位置的值小于等于 `hi` 的值，就将 `lo` 指针向右一位，否则将 `hi` 向左移一位。
+**双指针作为容器的边界**，每次循环都选出 `lo` 和 `hi` 中的较小值乘上 `lo` 和 `hi` 的距离就获取到的最大容积了（最大容积的值为：$(min(height[lo], height[hi]) * (hi - lo)$）。**移动当前值更小的指针**，如果 `lo` 位置的值小于等于 `hi` 的值，就将 `lo` 指针向右一位，否则将 `hi` 向左移一位，虽然有些赌的成分在里面（可能得到的结果会更差），所以需要在每次循环内都对比当前得到的面积和之前得到的最大面积哪个更大。
 
 **题解**
 
@@ -25,8 +25,11 @@ public:
         while (lo < hi) {
             int area = min(height[lo], height[hi]) * (hi - lo);
             ans = max(ans, area);
-            if (height[lo] <= height[hi]) lo++;
-            else hi--;
+          
+            if (height[lo] <= height[hi])
+              lo++;
+            else
+              hi--;
         }
         
         return ans;
