feat: add new solution

--- a/0201~0300/0209.md
+++ b/0201~0300/0209.md
@@ -12,7 +12,9 @@
 
 首先想到的就是暴力解法了，用两次循环找出**长度最小的连续数组**，用 `j - i + 1` 来表示当前搜索数组的长度。但是暴力解法总是不太好的，为了优化时间复杂度我们可以使用数组 `sums` 来存储前缀和，接下来就可以用二分查找找出最小一个大于等于 `target` 的最小下标 `bound` 使得 `sums[bound] >= target + sums[i]` ，然后更新最小子数组的长度。
 
-关键词：前缀和、二分查找
+还有一个方法就是使用滑动窗口，使用 start 和 end 来标记子数组，维护变量 sum 的值即（nums[start] 到 nums[end 的和）。初始状态下 start = end = 0，sum = 0，每次循环都将 nums[end] 的值加到 sum 上，直到 sum 大于 target 的值就更新子数组的最小长度（end - start + 1），可以将 sum - nums[start] 然后 start 的位置往右移，直到 sum 小于等于 target。
+
+关键词：前缀和、二分查找、滑动窗口
 
 难度：Middle
 
@@ -23,7 +25,6 @@ class Solution {
 public:
     int minSubArrayLen(int target, vector<int>& nums) {
         int n = nums.size();
-        if (!n) return 0;
         int ans = INT32_MAX;
         for (int i = 0; i < n; i++) {
             int sum = 0;
@@ -68,6 +69,24 @@ public:
 解法 3：
 
 ```c++
+class Solution {
+public:
+    int minSubArrayLen(int target, vector<int>& nums) {
+        int n = nums.size();
+        int start = 0, end = 0, sum = 0, ans = INT32_MAX;
 
+        while (end < n) {
+            sum += nums[end];
+            while (sum >= target) {
+                ans = min(ans, end - start + 1);
+                sum -= nums[start];
+                start++;
+            }
+            end++;
+        }
+
+        return ans == INT32_MAX ? 0 : ans;
+    }
+};
 ```
 
